# DCP06

./: .gitignore  README.md  vcpkg-configuration.json  vcpkg.json
.cursor/rules/: git-workflow.mdc
Docs/: Captivate_GUI_Design_Notes.md  Code_Cleanup_Status.md  DCP05_SDK_Handling_Analysis.md  DCP05_Summary.md  DCP06_Agent_Handoff_Summary.md  DCP06_Architecture_Review.md  DCP06_Crash_Analysis_BuildLog.md  DCP06_Creating_New_Displays_Guide.md  DCP06_DCP9_Math_Comparison.md  DCP06_DCP9_Reference.md  DCP06_DOM_POM_Rename_Tracking.md  DCP06_Database_Design.md  DCP06_Database_Migration_Plan.md  DCP06_Debugging_Crash_Dumps.md  DCP06_Icon_Verification.md  DCP06_LIST_PICK_Design.md  DCP06_LIST_PICK_Implementation_Plan.md  DCP06_Logging_Trace_Usage.md  DCP06_Point_Reuse_Analysis.md  DCP06_Points_Only_Database_Design.md  DCP06_Project_Plan.md  DCP06_Simulator_Fixes.md  DCP06_Terminology.md  DCP9_Summary.md  DCP_SDK_Setup_Instructions.md  README.md  ToDo.md
Project/: DCP06.sys
Project/MSVS/: DCP06-CS.sln  DCP06-CS.vcxproj  DCP06-VS2008.sln  DCP06-VS2008.vcproj  DCP06-VS2022.sln  DCP06-VS2022.vcxproj  DCP06.sln  DCP06.vcproj  DCP06.vcxproj  DCP06.vcxproj.filters  DCP06_Release_Stellar_EC7_3P (ARMV4I).xml  DCP06_Release_Win32.xml  DCP06_Release_x64.xml  Note.txt  UpgradeLog.htm
SWXRes/: DCP05 with icons.pptx
SWXRes_Source/: Config.xml
Text/: DCP05.LEN  DCP05.men  DCP05_TOK.HPP  DCP05_TOK.IPP  DCP05_TOK.lua  DCP06_TOK.HPP  DCP06_TOK.IPP  DCP06_TOK.lua  TXT_EXP.HPP
include/geometry/: Circle.h  Line.h  Plane.h  Point.h
include/sdk_fallback/: Onboard_Tok.hpp  UTL_Macro.hpp
scripts/: Install_VS2008_Client.bat  build_lang.bat  clean_comments.py  hpp_to_men.py  post_build_only.bat  remove_dcp_prefix.ps1  restructure_option_b.ps1  run_texttool.ps1  update_headers.py  update_includes.ps1  update_vcproj_paths.ps1  update_vcxproj_paths.ps1
src/application/: Application.cpp  ApplicationMenu.cpp  DCP06.cpp  DCP_Application.cpp  DCP_ApplicationMenu.cpp  DCP_LineFitMeas.cpp  DCP_LineFitting.cpp  DCP_LineSetting.cpp  DCP_LineSettingConf.cpp  DCP_Shaft.cpp  DCP_ShaftLine.cpp  LineFitMeas.cpp  LineFitting.cpp  LineSetting.cpp  LineSettingConf.cpp  Shaft.cpp  (+1 more)
test_build/: .gitignore  CMakeLists.txt  CMakeUserPresets.json  DCP06_TestBuild.sln  DCP06_TestBuild.vcxproj  README.md
(+457 files in other folders)
